--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ plugins {
   id "signing"
   id 'pl.allegro.tech.build.axion-release' version '1.15.3'
   id "com.github.hierynomus.license" version "0.16.1"
-  id "com.bmuschko.docker-remote-api" version "9.2.1"
   // id 'ru.vyarus.java-lib' version '2.1.0'
   id 'ru.vyarus.github-info' version '1.5.0'
   id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
@@ -98,6 +97,7 @@ testing {
         implementation SPOCK_CORE
         implementation COMMONS_IO
         implementation "org.mockito:mockito-core:5.4.0"
+        implementation "org.assertj:assertj-core:3.24.2"
         runtimeOnly LOGBACK_CLASSIC
       }
 
@@ -122,6 +122,13 @@ testing {
     }
 
     integrationTest(JvmTestSuite) {
+      dependencies {
+        implementation project()
+        implementation "ch.qos.logback:logback-classic:1.3.8"
+        implementation 'org.testcontainers:testcontainers:1.18.3'
+        implementation 'org.testcontainers:junit-jupiter:1.18.3'
+      }
+
       sources {
         java {
           srcDirs = ['src/it/java']
@@ -221,30 +228,6 @@ jacocoTestReport {
         html.required = true
     }
 }
-
-task buildItestImage(type: DockerBuildImage) {
-  inputDir = file('src/it/docker-image')
-  images.add('smbj/smbj-itest:latest')
-}
-
-task createItestContainer(type: DockerCreateContainer) {
-  dependsOn buildItestImage
-  targetImageId buildItestImage.getImageId()
-  hostConfig.portBindings = ['445:445']
-  hostConfig.autoRemove = true
-}
-
-task startItestContainer(type: DockerStartContainer) {
-    dependsOn createItestContainer
-    targetContainerId createItestContainer.getContainerId()
-}
-
-task stopItestContainer(type: DockerStopContainer) {
-    targetContainerId createItestContainer.getContainerId()
-}
-
-project.tasks.integrationTest.dependsOn(startItestContainer)
-project.tasks.integrationTest.finalizedBy(stopItestContainer)
 
 project.tasks.release.dependsOn([project.tasks.integrationTest, project.tasks.build])
 
