--- a/build.gradle
+++ b/build.gradle
@@ -125,8 +125,9 @@ testing {
       dependencies {
         implementation project()
         implementation "ch.qos.logback:logback-classic:1.3.8"
-        implementation 'org.testcontainers:testcontainers:1.18.3'
-        implementation 'org.testcontainers:junit-jupiter:1.18.3'
+        implementation 'org.testcontainers:testcontainers:1.19.0'
+        implementation 'org.testcontainers:junit-jupiter:1.19.0'
+        implementation 'org.apache.commons:commons-compress:1.24.0'
       }
 
       sources {
